# CS

./: .gitignore  22336057_丁晓琪_lab1.docx  README.md
AI/: my_math.py
AI/lab10-DQN/: DQN.md  DQN_SEED_1.pth  Homework.md  Untitled 1.md  help.txt  tempCodeRunnerFile.py  test.py  实验报告.md
AI/lab2-归结推理/: task1.py  task2.py  实验报告.docx
AI/lab3-象棋AI/: 实验5.docx
AI/lab4-遗传算法-退火算法/: 实验报告.docx
AI/lab5-逻辑回归-多层感知机/: buy_LR.py  buy_LR_MLP.py  buy_LR_reg.py  buy_Perceptron.py  tempCodeRunnerFile.py  test.py  实验报告.md  实验报告模板.md
AI/lab6-KNN-朴素贝叶斯/: KNN_sort.py  NB_sort.py  test.py
AI/lab7-决策树/: Decision_Tree.py  Decision_Tree_plus.py  test.py  实验实现.md  理论.md
AI/lab8-CNN/: CNN.py  CNN实验报告.md  Untitled.md  tempCodeRunnerFile.py  test.py
AI/lab9-qlearning/: lab9.md  lab9实验报告.md
Distributed_System/作业/: 作业1.md  作业2.md  作业3.md
OS/: bootloader.asm  python配置.docx  人工智能配置python.one
OS/lab2-mbr/: lab2.docx  mbr_1_02.asm  mbr_2_01.asm  mbr_2_03.asm
OS/theory-homework/: 22336057_丁晓琪_作业3.docx  22336057_丁晓琪_作业4.docx  作业七.md  作业八.md  作业六.md  参考答案.md  问题.md
ROS/APF/APF/: APF.cpp  CMakeLists.txt  main.cpp
ROS/Opencv/: hand.py  opencv.one
ROS/PX4/: 多旋翼学习.md  现代控制.md  项目学习.md
ROS/RTT/: CMakeLists.txt  main.cpp  rrt.h  test.cpp
ROS/task/: Assignment.md
ROS/控制理论/: 动态系统的建模与分析.md  现代控制理论.md
goodgood/: tkinker.py  tkinker.spec
goodgood/开发日记/: day1.md  day2.md  day3.md
lab1-内核启动/: lab1.docx  作业1.docx
systems/: Untitled.md  llama3.md  read.md  分布式.md  故障注入.md
week1_Code/: tempCodeRunnerFile.py
week2_Code/: task1.py
分布式系统/: 作业1.md
数字图像/lab1/: 实验报告.md
(+410 files in other folders)
